[project]
name = "bitnet-test"
version = "0.1.0"
description = "Testing BitNet b1.58 2B4T model"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "accelerate>=0.20.0",
    "safetensors>=0.4.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "nltk>=3.8.0",
    "tiktoken>=0.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git", rev = "096f25ae1f501a084d8ff2dcaf25fbc2bd60eba4" }
